example_objects/rover-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rover-ep
  name: rover-service
spec:
  selector:
    name: rover-ep # or label that selects all pods with same label
  ports:
  - protocol: TCP
    port: 8180
    targetPort: 7180
  type: ClusterIP
